Fixed the loadstatics in the list folder

--- a/mysite_2/templates/article/column/article_column.html
+++ b/mysite_2/templates/article/column/article_column.html
@@ -1,5 +1,5 @@
 {% extends "article/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}article column{% endblock %} {% block content %}
 <div>
     <p class="text-right"><!--button class="btn btn-primary">add column</button-->
