--- a/mysite_2/templates/article/column/article_detail.html
+++ b/mysite_2/templates/article/column/article_detail.html
@@ -1,5 +1,5 @@
 {% extends "article/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}articles list{% endblock %}
 {% block content %} 
 <div>
