--- a/mysite_2/templates/article/list/article_content.html
+++ b/mysite_2/templates/article/list/article_content.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load article_tags %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}articles list{% endblock %}
 {% block content %} 
 
