--- a/mysite_2/templates/article/list/author_articles.html
+++ b/mysite_2/templates/article/list/author_articles.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load article_tags %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}articles{% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
