--- a/mysite_2/templates/account/imagecrop.html
+++ b/mysite_2/templates/account/imagecrop.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <link rel="stylesheet" href="{% static 'css/imagecrop.css' %}"> 
 <div class="container">
     <div class="imageBox">
