--- a/mysite_2/templates/article/column/article_list.html
+++ b/mysite_2/templates/article/column/article_list.html
@@ -1,14 +1,14 @@
 {% extends "article/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}articles list{% endblock %}
 {% block content %} 
 <div>
     <table class="table table-hover"> 
         <tr>
-            <td>序号</td>
-            <td>标题</td> 
-            <td>栏目</td>
-            <td>操作</td> 
+            <td>Serial Number</td>
+            <td>Title</td> 
+            <td>Category</td>
+            <td>Action</td> 
         </tr>
         {% for article in articles %} 
         <tr id={{ article.id }}>
