Finalized the additiion of the load static

--- a/mysite_2/templates/course/manage/manage_course_list.html
+++ b/mysite_2/templates/course/manage/manage_course_list.html
@@ -1,5 +1,5 @@
 {% extends "article/base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}manage courses{% endblock %} 
 {% block content %}
 <div>
