--- a/mysite_2/templates/image/list_images.html
+++ b/mysite_2/templates/image/list_images.html
@@ -1,6 +1,6 @@
 {% extends "article/base.html" %}
 {% load thumbnail %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}images{% endblock %}
 {% block content %} 
 <div>
