--- a/mysite_2/templates/image/falls_images.html
+++ b/mysite_2/templates/image/falls_images.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block title %}Images{% endblock %} 
 {% block content %}
 <div class="container">
